Se agrega uso de base de datos
